[project]
name = "flowmatch-advanced"
description = "Custom nodes to make ComfyUI sampling closer to flow-matching behavior for Flux, Qwen-Image, and Z-Image."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Match ai-toolkit's pinned diffusers build for closest flowmatch parity.", "git+https://github.com/huggingface/diffusers@8600b4c10d67b0ce200f664204358747bd53c775"]

[project.urls]
Repository = "https://github.com/supSugam/ComfyUI-FlowMatch-Advanced"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/supSugam/ComfyUI-FlowMatch-Advanced/wiki"
"Bug Tracker" = "https://github.com/supSugam/ComfyUI-FlowMatch-Advanced/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-FlowMatch-Advanced"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

